@@ -84,7 +84,13 @@ if (isset ($_GET["new_msg"])) { //create message
 		<td class="datos2">'.__('Message to').':</td>
 		<td class="datos2">';
 		
-	$users = get_users_info (); //Get a list of all users
+	$users_full = get_group_users(array_keys(get_user_groups()));
+
+	$users = array();
+	foreach ($users_full as $user_id => $user_info) {
+		$users[$user_info['id_user']] = $user_info['fullname'];
+	}
+
 	$groups = get_user_groups ($config["id_user"], "AR"); //Get a list of all groups
 		
 	print_select ($users, "dest_user", $dest_user, '', __('-Select user-'), false, false, false, '', false);
